--- a/style.css
+++ b/style.css
@@ -60,3 +60,20 @@ form {
     margin : 5px;
 
   }
+
+  .first-box {
+    width: 200px; 
+    float:left; 
+    height: 150px;
+    margin: 50px 80px 60px 190px;
+    padding: auto;
+  }
+  
+  .second-box {
+    width: 500px; 
+    height: 150px; 
+    padding: auto;
+    float:right; 
+    text-align: justify;
+    margin: 50px;
+  }
