--- a/style.css
+++ b/style.css
@@ -96,15 +96,26 @@ form {
 
 #box-resultados{
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  
 }
 
+.cards{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 5px;
+}
 
 .card{
 background-color: white;
 box-shadow: rgba(32, 31, 31, 0.521);
-border-radius: 10%;
+border-radius: 5px 5px 5px;
+max-width: 20%;
+margin: 10%;
+text-align: center;
+align-items: center;
    
 }
 
