--- a/style.css
+++ b/style.css
@@ -87,6 +87,9 @@ form {
   display: flex;
   text-align: center;
   justify-content: space-around;
+  width : 10%;
+  margin-left: 45%;
+  
 }
 
 .opcao{
@@ -96,7 +99,7 @@ form {
   background-color: #EAECDB;
   padding: 5px 15px 5px 15px;
   border-radius: 1em;
-
+  margin : 5px;
 }
 
 #box-resultados{
