--- a/style.css
+++ b/style.css
@@ -123,3 +123,32 @@ align-items: center;
   width: 100px;
 }
 
+/*depois tiro essas formatações da busca*/
+.titulo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.info {
+  display: block;
+  margin-left: 15px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.card-img {
+  max-width: 200px;
+  display: block;
+}
+
+footer{
+  background-color: #544441 !important;
+  width: 100%;
+}
+
+#imagemfinal {
+  background-color: #EAECDB !important;
+  margin-left: 39%;
+  padding-left: 10px;
+  padding-right: 1px;
+}
