Mudança de cor do body

--- a/style.css
+++ b/style.css
@@ -1,173 +1,177 @@
 body {
-    font-family: 'BIZ UDMincho', serif;
-    background-color: #E5E5E5;
-    overflow: overlay;
+  font-family: 'BIZ UDMincho', serif;
+  background-color: #F3F4F9;
+  overflow: overlay;
 }
 
-h5{
-    
-    text-align: match-parent !important;
-    padding-left: 300px;
-    margin-right: 300px;
+h5 {
+
+  text-align: match-parent !important;
+  padding-left: 300px;
+  margin-right: 300px;
 }
-#divcupom{
-    background-color: #BAD9AC;
-    padding : 10px 10px 6px 10px;
+
+#divcupom {
+  background-color: #BAD9AC;
+  padding: 10px 10px 6px 10px;
 }
 
 form {
-    background-color: #fff;
-    width: 50%;
-    height: 50%;
-    border-radius: 5px;
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    padding: 10px 10px 10px 60px;
-    margin : auto;
-  }
-  
-  input {
-    all: unset;
-    font: 16px;
-    height: 100%;
-    width: 100%;
-    padding: 6px 10px;
-    border-radius: 25px;
-    border : 1px solid #6AA84F;
-    
-  }
-  
-  ::placeholder {
-    color: #bad9ac;
-    opacity: 0.7; 
-    
-  }
-  
-  svg {
-    color: #fff;
-    fill:  currentColor;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-  }
-  
-#botaobusca{
-    all: unset;
-    cursor: pointer;
-    width: 44px;
-    height: 44px;
-    background-color : #bad9ac;
-    border-radius :  10px 35px 15px 35px;
-    transform : rotate(90deg);
-    margin : 5px;
+  background-color: #fff;
+  width: 50%;
+  height: 50%;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 10px 10px 60px;
+  margin: auto;
+}
 
-  }
-main{
+input {
+  all: unset;
+  font: 16px;
+  height: 100%;
+  width: 100%;
+  padding: 6px 10px;
+  border-radius: 25px;
+  border: 1px solid #6AA84F;
+
+}
+
+::placeholder {
+  color: #bad9ac;
+  opacity: 0.7;
+
+}
+
+svg {
+  color: #fff;
+  fill: currentColor;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+}
+
+#botaobusca {
+  all: unset;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  background-color: #bad9ac;
+  border-radius: 10px 35px 15px 35px;
+  transform: rotate(90deg);
+  margin: 5px;
+
+}
+
+main {
   width: fit-content;
   margin: auto;
 }
-  .first-box {
-    width: 200px; 
-    float:left; 
-    height: 150px;
-    margin: 50px 80px 60px 190px;
-    padding: auto;
-    text-align: justify;
-   
-  }
 
- 
-  #first-box-debaixo{
-    width: 22%;
-    height: 30%;
-    text-align: justify;
-    line-height: 10px;
-  }
-  
-  .second-box {
-    width: 500px; 
-    height: 150px; 
-    padding: auto;
-    float:right; 
-    text-align: justify;
-    margin: 50px;
-  
-  }
- 
-  .figura{
-    opacity: 69%;
-    border-radius: 25px;
-  }
- 
-  .figura:hover{
-    opacity:100%;
-    transition:opacity 2s;
-  }
+.first-box {
+  width: 200px;
+  float: left;
+  height: 150px;
+  margin: 50px 80px 60px 190px;
+  padding: auto;
+  text-align: justify;
 
-  p{
-    line-height: 180%;
-  }
-#opcoes{
+}
+
+
+#first-box-debaixo {
+  width: 22%;
+  height: 30%;
+  text-align: justify;
+  line-height: 10px;
+}
+
+.second-box {
+  width: 500px;
+  height: 150px;
+  padding: auto;
+  float: right;
+  text-align: justify;
+  margin: 50px;
+
+}
+
+.figura {
+  opacity: 69%;
+  border-radius: 25px;
+}
+
+.figura:hover {
+  opacity: 100%;
+  transition: opacity 2s;
+}
+
+p {
+  line-height: 180%;
+}
+
+#opcoes {
   display: flex;
   text-align: center;
   justify-content: space-around;
-  width : 10%;
+  width: 10%;
   margin-left: 45%;
-  
+
 }
 
-.opcao{
+.opcao {
 
   text-decoration: none;
   color: #384F08;
   background-color: #EAECDB;
   padding: 5px 15px 5px 15px;
   border-radius: 1em;
-  margin : 5px;
+  margin: 5px;
 }
 
-#box-resultados{
+#box-resultados {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
 }
 
-.cards{
+.cards {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   gap: 3px;
 }
 
-.card{
-background-color: white;
-box-shadow: rgba(32, 31, 31, 0.521);
-border-radius: 5px 5px 5px;
-max-width: 20%;
-margin: 15px 30px 40px 60px;
-text-align: justify;
-line-height: 22px;
-padding: 10px 25px 15px 10px;
-align-items: center; 
-transition: all .2s ease-in-out;  
+.card {
+  background-color: white;
+  box-shadow: rgba(32, 31, 31, 0.521);
+  border-radius: 5px 5px 5px;
+  max-width: 20%;
+  margin: 15px 30px 40px 60px;
+  text-align: justify;
+  line-height: 22px;
+  padding: 10px 25px 15px 10px;
+  align-items: center;
+  transition: all .2s ease-in-out;
 }
 
-.card:hover{
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
-  }
+.card:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
 
 
-.card img{
+.card img {
   width: 100px;
-  padding : 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
 }
 
-footer{
+footer {
   background-color: #544441 !important;
   width: 100%;
 }
@@ -181,9 +185,9 @@ footer{
 
 
 
-@media only screen and (max-width: 987px){
-  .navbar-brand{
-      padding-left: 0px;
+@media only screen and (max-width: 987px) {
+  .navbar-brand {
+    padding-left: 0px;
   }
 
   .main {
@@ -191,45 +195,50 @@ footer{
     flex-direction: column;
     max-width: 10px;
     text-align: match-parent;
-    margin : 50px;
+    margin: 50px;
   }
- .container{
-   max-width: fit-content;
-   padding: 10px;
-   flex-direction: column;
- }
- .first-box{
-   text-align: center;
-   max-width: 200px;
-   max-height: 300px;
-   flex-direction: column;
-   margin: 0px 40px;
-   line-height: 120%;
-   justify-content: space-around;
- }
- .second-box{
-  text-align: center;
-  max-width: 200px;
-  max-height: 300px;
-  padding: 150px 200px;
-  flex-direction: column;
-  margin: 150px;
-  line-height: 120%;
-  justify-content: space-around;
- }
- .figura{
-   flex-direction: column-reverse;
-   padding: 0px;
-   margin: auto;
- }
-  .footer{ 
+
+  .container {
+    max-width: fit-content;
+    padding: 10px;
+    flex-direction: column;
+  }
+
+  .first-box {
+    text-align: center;
+    max-width: 200px;
+    max-height: 300px;
+    flex-direction: column;
+    margin: 0px 40px;
+    line-height: 120%;
+    justify-content: space-around;
+  }
+
+  .second-box {
+    text-align: center;
+    max-width: 200px;
+    max-height: 300px;
+    padding: 150px 200px;
+    flex-direction: column;
+    margin: 150px;
+    line-height: 120%;
+    justify-content: space-around;
+  }
+
+  .figura {
+    flex-direction: column-reverse;
+    padding: 0px;
+    margin: auto;
+  }
+
+  .footer {
     padding: 0px 0px 0px 0px;
     max-width: fit-content;
   }
 
-  #imagemfinal{
+  #imagemfinal {
     padding: 30px 20px;
-    margin : auto;
+    margin: auto;
     margin-left: 10px;
     border-radius: 50px;
     max-width: 300px;
